tests/ui/addrspace/space_mismatch.rx
//@ spec: RXS-0067
device fn consume(v: View<constant, f32>) {}

kernel fn k(g: View<global, f32>) {
    consume(g); //~ ERROR RX3002
}

fn main() {}
